--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "@11ty/eleventy --serve",
+    "start": "npx @11ty/eleventy --serve",
     "build": "env NODE_ENV=production npx eleventy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
